dark mode fixed

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.dark {
+  background-color: #001122 !important;
+}
